prepared for redevelopment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ include_directories(src)
 add_executable (test_vector tests/test_vector.cc)
 target_sources (test_vector PUBLIC src/vector.h src/expression.h)
 
-
+add_executable (test_matrix tests/test_matrix.cc)
+target_sources (test_matrix PUBLIC src/matrix.h src/matrix_expression.h)
 
 
 
