--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,17 +17,23 @@ find_package(pybind11 CONFIG REQUIRED)
 add_executable (test_vector tests/test_vector.cc)
 target_sources (test_vector PUBLIC src/vector.h src/expression.h)
 
-add_executable (test_matrix tests/test_matrix.cc)
-target_sources (test_matrix PUBLIC src/matrix.h src/matrix_expression.h)
+if(WIN32)
+   file (DOWNLOAD https://sourceforge.net/projects/openblas/files/v0.3.24/OpenBLAS-0.3.24-x64.zip/download "${CMAKE_BINARY_DIR}/openblas.zip" EXPECTED_MD5 fc08fe8c0dc7364da115d0e09b5a134f)
+   file (ARCHIVE_EXTRACT INPUT ${CMAKE_BINARY_DIR}/openblas.zip DESTINATION ${CMAKE_BINARY_DIR}/openblas)
+   set(BLA_STATIC ON)
+   set(BLAS_LIBRARIES ${CMAKE_BINARY_DIR}/openblas/lib/libopenblas.a CACHE PATH "BLAS" FORCE)
+   set(LAPACK_LIBRARIES ${CMAKE_BINARY_DIR}/openblas/lib/libopenblas.a CACHE PATH "LAPACK" FORCE)
+endif()
+
+
 
 find_package(LAPACK REQUIRED)
 add_executable (test_lapack tests/test_lapack.cc)
-target_link_libraries (test_lapack PUBLIC ${LAPACK_LIBRARIES})
+target_link_libraries (test_lapack PUBLIC LAPACK::LAPACK)
 
 
 pybind11_add_module(bla src/bind_bla.cpp)
 
 install (TARGETS bla DESTINATION ASCsoft)
 install (FILES src/vector.h DESTINATION ASCsoft/include)
-
 
