--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(pybind11 CONFIG REQUIRED)
 
 
 add_executable (test_vector tests/test_vector.cc)
+add_executable (test_matrix tests/test_matrix.cc)
 
 
 pybind11_add_module(bla src/bind_bla.cpp)
